cmake_minimum_required(VERSION 3.3)

# Project
project(docs)
include(../scripts/cmake/xtd_commands.cmake)
include(../scripts/cmake/xtd_version.cmake)

add_sources(
  abstract_class_design.md
  abstract_factory.md
  abstractions_abstract_types_and_interfaces.md
  adapter.md
  architecture.md
  base_classes_for_implementing_abstractions.md
  bridge.md
  builder.md
  c++.md
  capitalisation_conventions.md
  chain_of_responsibility.md
  choosing_between_class_and_struct.md
  class_cleanup.md
  class_initialize.md
  coding_conventions_guidelines.md
  command.md
  common_design_patterns.md
  composite.md
  constructor_design.md
  contact.md
  csf.md
  decorator.md
  dependencies.md
  design_guidelines_for_exception.md
  design_guidelines.md
  designing_for_extensibility.md
  development_status_cmake.md
  development_status_themes.md
  development_status_toolkits.md
  development_status_tools.md
  development_status_xtd_core.md
  development_status_xtd_drawing.md
  development_status_xtd_forms.md
  development_status_xtd_tunit.md
  development_status.md
  documentation.md
  downloads.md
  enum_design.md
  event_design.md
  events_and_callbacks.md
  examples.md
  exception_throwing.md
  exceptions_and_performance.md
  external_tools_libraries_and_toolkits.md
  facade.md
  factory_method.md
  field_design.md
  final.md
  flyweight.md
  gallery.md
  gammasoft.md
  general_naming_conventions.md
  getting_started.md
  guide_check_version.md
  guide_delegates_and_lambdas.md
  guide_handle_and_raise_events.md
  guide_hello_world.md
  guide_observer_design_pattern.md
  guide_raise_and_consume_events.md
  guide_style_sheets_box_model.md
  guide_style_sheets_overview.md
  guide_style_sheets_reference.md
  guides.md
  hierarchy.md
  home.md
  ignore_test_method.md
  ingore_test_method.md
  interface_design.md
  interpreter.md
  iterator.md
  license.md
  links.md
  mediator.md
  member_design_guidelines.md
  member_overloading.md
  memento.md
  names_of_classes_structs_and_interfaces.md
  names_of_libraries_and_dlls.md
  names_of_namespace.md
  names_of_type_members.md
  naming_guidelines.md
  naming_parameters.md
  naming_resources.md
  nested_types.md
  news.md
  non-final_classes.md
  observer.md
  operator_overloads.md
  parameter_design.md
  portability.md
  property_design.md
  protected_members.md
  prototype.md
  proxy.md
  README.md
  release_notes.md
  roadmap.md
  singleton.md
  state.md
  static_class_design.md
  strategy.md
  struct_design.md
  support.md
  template_method.md
  test_class.md
  test_cleanup.md
  test_initialize.md
  test_method.md
  themes.md
  tools.md
  translations_status.md
  common_io_tasks_copy_directories.md
  common_io_tasks_enumerate_directories_and_files.md
  common_io_tasks_file_and_stream_io.md
  common_io_tasks_open_and_append_to_a_log_file.md
  common_io_tasks_read_and_write_to_a_newly_created_data_file.md
  common_io_tasks_read_text_from_a_file.md
  common_io_tasks_write_a_text_file.md
  common_io_tasks_write_text_to_a_file.md
  common_io_tasks.md
  ambient_properties.md
  control_appearance.md
  controls_management.md
  date_time.md
  delegates.md
  ebook_console_classes.md
  ebook_controls.md
  ebook_custom_controls.md
  ebook_dialogs.md
  ebook_drag_and_drop.md
  ebook_events.md
  ebook_first_programs.md
  ebook_graphics.md
  ebook_introduction.md
  ebook_layout_management.md
  ebook_menus_and_toolbars.md
  ebook_tetris.md
  ebook_unit_testing_classes.md
  ebook.md
  events.md
  form.md
  position_and_layout_of_controls.md
  size_and_location_properties.md
  thread_safe_control_call.md
  writing_applicaion_console.md
  writing_applicaion_extending_test.md
  writing_applicaion_gui.md
  writing_applicaion_running_test.md
  writing_applicaion_test.md
  writing_applications.md
  tutorials.md
  type_design_guidelines.md
  usage_guidelines.md
  using_standard_exception_types.md
  virtual_members.md
  visitor.md
  xtd_forms_explanations.md
)
add_sources(
  ../AUTHORS.md
  ../CODE_OF_CONDUCT.md
  ../CONTRIBUTING.md
  ../LICENSE.md
  ../README.md
)
target_type(INTERFACE_LIBRARY)

# Install
if (XTD_INSTALL_RESOURCES)
  install(DIRECTORY pictures/examples/. DESTINATION share/xtd/resources/pictures/examples)
endif ()
