cmake_minimum_required(VERSION 3.3)

# Solution
project(src)

# Projects
add_subdirectory(xtd.core)
add_subdirectory(xtd.drawing.native)
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "cocoa")
  add_subdirectory(xtd.drawing.native.cocoa)
  set(XTD_DRAWING_NATIVE_LIBRARY xtd.drawing.native.cocoa)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "fltk")
  add_subdirectory(xtd.drawing.native.fltk)
  set(XTD_DRAWING_NATIVE_LIBRARY xtd.drawing.native.fltk)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "gtk3")
  add_subdirectory(xtd.drawing.native.gtk3)
  set(XTD_DRAWING_NATIVE_LIBRARY xtd.drawing.native.gtk3)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "gtk4")
  add_subdirectory(xtd.drawing.native.gtk4)
  set(XTD_DRAWING_NATIVE_LIBRARY xtd.drawing.native.gtk4)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "qt5")
  add_subdirectory(xtd.drawing.native.qt5)
  set(XTD_DRAWING_NATIVE_LIBRARY xtd.drawing.native.fltk)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "msw")
  add_subdirectory(xtd.drawing.native.win32)
  set(XTD_DRAWING_NATIVE_LIBRARY xtd.drawing.native.win32)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "wxwidgets")
  add_subdirectory(xtd.drawing.native.wxwidgets)
  set(XTD_DRAWING_NATIVE_LIBRARY xtd.drawing.native.wxwidgets)
endif ()
add_subdirectory(xtd.drawing)
add_subdirectory(xtd.forms.native)
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "cocoa")
  add_subdirectory(xtd.forms.native.cocoa)
  set(XTD_FORMS_NATIVE_LIBRARY xtd.forms.native.cocoa)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "fltk")
  add_subdirectory(xtd_forms.native.fltk)
  set(XTD_FORMS_NATIVE_LIBRARY xtd.forms.native.fltk)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "gtk3")
  add_subdirectory(xtd.forms.native.gtk3)
  set(XTD_FORMS_NATIVE_LIBRARY xtd.forms.native.gtk3)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "gtk4")
  add_subdirectory(xtd.forms.native.gtk4)
  set(XTD_FORMS_NATIVE_LIBRARY xtd.forms.native.gtk4)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "qt5")
  add_subdirectory(xtd.forms.native.qt5)
  set(XTD_FORMS_NATIVE_LIBRARY xtd.forms.native.fltk)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "msw")
  add_subdirectory(xtd.forms.native.win32)
  set(XTD_FORMS_NATIVE_LIBRARY xtd.forms.native.win32)
endif ()
if ("${XTD_NATIVE_GRAPHIC_TOOLKIT}" STREQUAL "wxwidgets")
  add_subdirectory(xtd.forms.native.wxwidgets)
  set(XTD_FORMS_NATIVE_LIBRARY xtd.forms.native.wxwidgets)
endif ()
add_subdirectory(xtd.forms)
add_subdirectory(xtd.tunit)
add_subdirectory(xtd)
