cmake_minimum_required(VERSION 3.3)

project(tests)

add_subdirectory(xtd.console.manual_tests)
add_subdirectory(xtd.console.unit_tests)
add_subdirectory(xtd.core.manual_tests)
add_subdirectory(xtd.core.unit_tests)
add_subdirectory(xtd.delegates.manual_tests)
add_subdirectory(xtd.delegates.unit_tests)
add_subdirectory(xtd.diagnostics.manual_tests)
add_subdirectory(xtd.diagnostics.unit_tests)
add_subdirectory(xtd.drawing.manual_tests)
add_subdirectory(xtd.drawing.unit_tests)
add_subdirectory(xtd.manual_tests)
add_subdirectory(xtd.unit_tests)
