cmake_minimum_required(VERSION 3.3)

project(tests)

add_subdirectory(xtd.console.manual_tests)
add_subdirectory(xtd.console.unit_tests)
add_subdirectory(xtd.core.manual_tests)
add_subdirectory(xtd.core.unit_tests)
add_subdirectory(xtd.diagnostics.manual_tests)
add_subdirectory(xtd.diagnostics.unit_tests)
add_subdirectory(xtd.drawing.manual_tests)
add_subdirectory(xtd.drawing.unit_tests)
add_subdirectory(xtd.forms.manual_tests)
add_subdirectory(xtd.forms.unit_tests)
add_subdirectory(xtd.io.manual_tests)
add_subdirectory(xtd.io.unit_tests)
add_subdirectory(xtd.tunit.manual_tests)
add_subdirectory(xtd.tunit.unit_tests)
add_subdirectory(xtd.manual_tests)
add_subdirectory(xtd.unit_tests)
